# IRBEM

./: Makefile  compile.py
.github/workflows/: compile.yml
docs/frames/: how2build.html  matlab.html
example/: multi_Lstar_hmin.c
matlab/: libirbem.h  onera_desp_lib_load.m
python/: pyproject.toml
